[package]
name = "nanoprogress"
version = "0.1.0"
edition = "2021"
description = "A minimal, zero-dependency terminal progress bar for Rust CLI applications"
license = "MIT"
repository = "https://github.com/anthonysgro/nanoprogress"
keywords = ["progress", "bar", "terminal", "cli", "tui"]
categories = ["command-line-interface"]
readme = "README.md"

[dependencies]

[dev-dependencies]
quickcheck = "1"
